syntax = "proto3";

package Protocol;
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId {
  S_ENTER_GAME = 0;
  S_LEAVE_GAME = 1;
  S_SPAWN = 2;
  S_DESPAWN = 3;
  C_MOVE = 4;
  S_MOVE = 5;
}

enum State{
  IDLE = 0;
  MOVING = 1;
  ATTACK = 2;
  DEAD = 3;
}

enum GameObjectType {
  NONE = 0;
  PLAYER = 1;
  CMONSTERSPAWNER = 2;
  RMONSTERSPAWNER = 3;
  CMONSTER = 4;
  RMONSTER = 5;
  BUGGY = 6;
}

message S_EnterGame {
  ObjectInfo player = 1;
}

message S_LeaveGame {
}

message S_Spawn {
  repeated ObjectInfo objects = 1;
}

message S_Despawn {
  repeated int32 objectIds = 1;
}

message C_Move {
  PositionInfo posInfo = 1;
}

message S_Move {
  int32 objectId = 1;
  PositionInfo posInfo = 2;
}

message C_Monster {
  PositionInfo posInfo = 2;
}

message S_Monster {
  int32 objectId = 1;
  PositionInfo posInfo = 2; 
}

message PlayerInfo {
  int32 playerId = 1;
  string name = 2;
  PositionInfo posInfo = 3;
}

message ObjectInfo {
  int32 objectId = 1;
  string name = 2;
  PositionInfo posInfo = 3;
  StatInfo statInfo = 4;
}

message PositionInfo {
  float posX = 1;
  float posY = 2;
  float posZ = 3;
  float dirX = 4;
  float dirZ = 5;
  float rotY = 6;
  float spineX = 7;
  float spineY = 8;
  float spineZ = 9;
  State state = 10;
  bool isJump = 11;
  bool IsShoot = 12;
  bool IsEquiq = 13;
  int32 carId = 14;
  int32 caruserId = 15;
}

message StatInfo {
  int32 level = 1;
  int32 hp = 2;
  int32 maxHp = 3;
  int32 attack = 4;
  float speed = 5;
  int32 totalExp = 6;
}